--- a/src/linksniffernew/LinkGUI.form
+++ b/src/linksniffernew/LinkGUI.form
@@ -74,23 +74,18 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="step2" min="-2" max="-2" attributes="0"/>
+                          <Component id="step1" min="-2" max="-2" attributes="0"/>
+                          <Component id="step3" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="domainid" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-                              <Component id="errorMsg" min="-2" pref="173" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="step2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="step1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="step3" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="loginBtn" min="-2" max="-2" attributes="0"/>
-                                  <Component id="domainid" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="loginBtn" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="101" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -160,7 +155,6 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="sniffProgress" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                      <Component id="errorMsg" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -182,13 +176,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="errorMsg">
-      <Properties>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="ff" type="rgb"/>
-        </Property>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="step2">
       <Properties>
         <Property name="text" type="java.lang.String" value="Step 2:"/>
@@ -198,6 +185,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Domain Id"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="domainidActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="domainBtn">
       <Properties>
